...
              flex: 1,
              child: Container(
                decoration: BoxDecoration(color: kGreyBackgroundColor, borderRadius: BorderRadius.only(topLeft: Radius.circular(30.0), topRight: Radius.circular(30.0))),
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                  children: [
                    Flexible(child: NavigationButton(key: const Key('welcome_register'), buttonText: 'Register', onPressed: () => Navigator.pushNamed(context, RegisterScreen.route))),
                    Flexible(child: NavigationButton(key: const Key('welcome_login'), buttonText: 'Login', onPressed: () => Navigator.pushNamed(context, LoginScreen.route))),
                  ],
                ),
              ),
            )
          ],
        ),
...
